opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/shexp"
bug-reports: "https://github.com/janestreet/shexp/issues"
dev-repo: "git+https://github.com/janestreet/shexp.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/shexp/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.08.0"}
  "posixat"
  "sexplib0"
  "base-threads"
  "dune"         {>= "2.0.0"}
  "spawn"        {>= "v0.15"}
]
synopsis: "Process library and s-expression based shell"
description: "
Shexp is composed of two parts: a library providing a process monad
for shell scripting in OCaml as well as a simple s-expression based
shell interpreter. Shexp works on both Unix and Windows.
"
